<resources>
    <string name="app_name">Changos Consumidor</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="titleCategories">Categorías</string>

    <!-- Home -->
    <string name="title">Changos</string>
    <string name="app">App</string>
    <string name="categorias">Categorias</string>
    <string name="lista">Lista</string>
    <string name="productos">Productos</string>

    <string name="volver">Volver</string>

    <!-- Categorias -->
    <string name="hintCat">Ingresar categoría</string>
    <string name="btnAgregarCat">Agregar</string>
    <string name="btnEliminarCat">Eliminar</string>
    <string name="btnEditarCat">Editar</string>

    <!-- Productos -->
    <string name="hintProd">Ingresar producto</string>
    <string name="hintMarcaProd">Ingresar Marca</string>
    <string name="hintContentUnit">Ingresar tipo de medida</string>
    <string name="hintContentQuantity">Ingresar cantidad</string>
    <string name="btnAgregarProd">Agregar</string>
    <string name="btnEliminarProd">Eliminar</string>
    <string name="btnEditarProd">Editar</string>

    <!-- Listas -->
    <string name="listaProd">Lista de Items</string>
    <string name="btnAgregarItem">Agregar</string>

    <!-- Agregar Items -->
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>


</resources>
