<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasActivity">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/btn_de_cat_a_home"
        android:onClick="onClickAgregarCat"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="30dp"
        android:text="@string/titleCategories"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAgregarCat"
            android:textColor="@color/btnAzul"
            android:background="@drawable/diseno_button"
            android:id="@+id/btnAgregarCategoria"
            android:onClick="onClickAgregarCat"
            android:layout_alignParentRight="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campoCategoria"
            android:hint="@string/hintCat"
            android:inputType="text"
            android:layout_toLeftOf="@+id/btnAgregarCategoria"
            />

    </RelativeLayout>


    <ListView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listCategorias"
        ></ListView>


</LinearLayout>