<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarItem"
    tools:ignore="Autofill">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volver"
        android:textColor="@color/btnAzul"
        android:background="@drawable/diseno_button"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/btn_de_agregarItem_a_list"
        android:onClick="onClickAgregarItem"
        />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/btnAgregarProd"
            android:textColor="@color/btnAzul"
            android:background="@drawable/diseno_button"
            android:id="@+id/btnAgregarItemFinal"
            android:onClick="onClickAgregarItem"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnAgregarItemFinal"
            android:id="@+id/spinnerCategoriasDeItem"
            android:layout_marginTop="10dp"
            >
        </Spinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnAgregarItemFinal"
            android:id="@+id/spinnerProductoDeItem"
            android:layout_below="@id/spinnerCategoriasDeItem"
            android:layout_marginTop="20dp"
            >
        </Spinner>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campoCantidad"
            android:hint="@string/hintContentQuantity"
            android:inputType="number"
            android:layout_toStartOf="@+id/btnAgregarItemFinal"
            android:layout_below="@id/spinnerProductoDeItem"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campoPrecio"
            android:hint="@string/precio"
            android:inputType="numberDecimal"
            android:layout_toStartOf="@+id/btnAgregarItemFinal"
            android:layout_below="@id/campoCantidad"
            />

    </RelativeLayout>

</LinearLayout>