<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_naranja"
    tools:context=".HomeActivity">

    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title"
                android:textSize="30dp"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="36dp"
                android:text="@string/app"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_alignParentRight="true"
                android:src="@drawable/carro_morado"
                android:layout_width="70dp"
                android:layout_height="70dp"/>

        </RelativeLayout>
        
        <GridLayout
            android:columnCount="1"
            android:rowCount="4"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cvLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="30dp"

                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/listaroja"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="24dp"
                        android:text="@string/lista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="30dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="irCategorias"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/diagrama" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/categorias"
                        android:textColor="#6f6f6f"
                        android:textSize="24dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:elevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="30dp"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/canasta_comida"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <TextView
                        android:layout_marginTop="1dp"
                        android:textColor="#6f6f6f"
                        android:textSize="24dp"
                        android:text="@string/productos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>